--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -4,17 +4,10 @@ block content
   .row.banner
     .col-12
       
-  .row
-    .col-12.col-lg-8
-      h1 About
-      p 
-        | Welcome to Epic Expeditions, your ultimate travel companion for discovering the world’s most captivating destinations. Our mission is to provide you with expert insights, practical tips, and inspiring recommendations to make your travels unforgettable.
-      h2 Who we are
-      p 
-        | We are a team of passionate travel enthusiasts, writers, and explorers dedicated to sharing our love for travel with you. With years of experience exploring diverse cultures, hidden gems, and breathtaking landscapes, we bring you authentic and up-to-date information to help you plan your next adventure.
-      h2 What we do
-      p 
-        | At Epic Expeditions, we offer comprehensive guides and travel advice on a wide range of destinations. From the bustling streets of Tokyo to the serene beaches of Goa, our in-depth articles, curated itineraries, and local tips are designed to enhance your travel experience. Whether you're a seasoned traveler or planning your first trip, we provide the resources you need to navigate your journey with ease.
-
-
-
+   .card.card-primary
+            .card-block
+            <p style="color: black; font-size: 40px;"><strong>Welcome to Grabites!</strong></p>
+            <p style="color: white; font-size: 20px;">At Grabites, we believe that dining is more than just a meal – it's an experience. From the moment you walk through our doors, you'll be greeted with warm hospitality and a cozy atmosphere designed to make you feel at home. Whether you're here for a quick bite or a special occasion, our diverse menu is crafted to satisfy every palate, featuring fresh, locally-sourced ingredients and seasonal dishes.</p>
+            <p style="color: black; font-size: 40px;"> <strong>Why visit us?</strong></p>
+            <p style="color: white; font-size: 20px;">It's simple:<br>  Deliciously Authentic Cuisine: Our chefs pour their passion into every dish, delivering flavors that transport you to a world of culinary delight.<br>  Exceptional Service: We pride ourselves on going above and beyond to make every guest feel like part of our family.<br>  Ambiance that Inspires: Enjoy a relaxed, welcoming space thats perfect for everything from casual dinners to celebrations with friends and loved ones.<br>  Unforgettable Experiences: From signature cocktails to mouth-watering desserts, every visit is an opportunity to indulge in something special.</p>
+            
