--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -9,7 +9,6 @@ block content
     .col-12.col-lg-9
      
       .row
-        // Coffee Items in Cards
         .col-12.col-md-6
           .card.card-primary
             .card-block
@@ -17,79 +16,86 @@ block content
               .d-flex
                 img.img-fluid(src='/images/noodles.png', alt='noodles', style='width: 150px; height: auto; margin-right: 15px;')
                 .coffee-description
-                  p Our espresso is rich and bold, made from finely ground coffee beans.
+                  p Our noodles are perfectly chewy, with a rich, savory sauce that balances flavor and texture in every bite.<br>There are both veg as well as nonveg options to coose from.
                   p Cost: &#8377; 150
-                  a.btn.btn-primary(href='#') Add to Cart
-
+                  
           .card.card-primary
             .card-block
               h3 Fried rice
               .d-flex
                 img.img-fluid(src='/images/rice.png', alt='friedrice', style='width: 150px; height: auto; margin-right: 15px;')
                 .coffee-description
-                  p Our Americano is a smooth blend of espresso and hot water.
+                  p Our fried rice is savory, perfectly seasoned with soy sauce, packed with tender vegetables, eggs, and juicy protein, delivering a smoky, wok-fried flavor.<br>There are both veg as well as nonveg options to coose from.
                   p Cost: &#8377; 180
-                  a.btn.btn-primary(href='#') Add to Cart 
-
+                  
           .card.card-primary
             .card-block
               h3 Burgers
               .d-flex
                 img.img-fluid(src='/images/Burger.png', alt='Burger', style='width:   170px; height: 150px; margin-right: 15px;')
                 .coffee-description
-                  p Our cappuccino features a perfect balance of espresso, steamed milk, and froth.
+                  p Our burgers are juicy, perfectly seasoned patties topped with fresh ingredients, nestled in a soft, toasted bun.<br>There are both veg as well as nonveg options to coose from.
                   p Cost: &#8377; 200
-                  a.btn.btn-primary(href='#') Add to Cart
-
+                  
           .card.card-primary
             .card-block
               h3 Pizzas
               .d-flex
                 img.img-fluid(src='/images/pizza.png', alt='pizza', style='width: 180px; height: 160px; margin-right: 15px;')
                 .coffee-description
-                  p Our latte is creamy and smooth, crafted with steamed milk and espresso.
+                  p Our pizza is a wood-fired, thin-crust pie topped with fresh mozzarella, tangy tomato sauce, and fragrant basil, perfectly crisped and bubbling with flavor.<br>There are both veg as well as nonveg options to coose from.
                   p Cost: &#8377; 220
-                  a.btn.btn-primary(href='#') Add to Cart
-
+                  
           .card.card-primary
             .card-block
               h3 Pastas
               .d-flex
                 img.img-fluid(src='/images/pasta.png', alt='pasta', style='width: 140px; height: auto; margin-right: 15px;')
                 .coffee-description
-                  p Our cold brew is steeped for hours, resulting in a smooth and refreshing coffee.
+                  p Our pasta is coated in a rich, flavorful sauce that complements its texture, creating a harmonious blend of taste and comfort.<br>There are both veg as well as nonveg options to coose from.
                   p Cost: &#8377; 180
-                  a.btn.btn-primary(href='#') Add to Cart
-
+                  
     .col-12.col-lg-3
       .card.card-primary
         .card-block
-          h2 Customer Reviews
+          h2.card-title Customer reviews
+          a.btn.btn-primary.float-right(href='/location/review/new') Write a Review
           .row.review
             .col-12.no-gutters.review-header
               span.rating
                 i.fas.fa-star
                 i.fas.fa-star
                 i.fas.fa-star
+                i.fas.fa-star
                 i.far.fa-star
+              span.reviewAuthor Tapan 
+              small.reviewTimestamp 17 March 2021
+               .col-12
+              p Amazinggg place!
+          .row.review
+            .col-12.no-gutters.review-header
+              span.rating
+                i.fas.fa-star
+                i.fas.fa-star
+                i.fas.fa-star
+                i.fas.fa-star
                 i.far.fa-star
-              span.reviewAuthor Pawala
-              small.reviewTimestamp  16 February 2023
-            .col-12
-              p Cappuccino was great
-            .row.review
-              .col-12.no-gutters.review-header
-                span.rating
-                  i.fas.fa-star
-                  i.fas.fa-star
-                  i.fas.fa-star
-                  i.far.fa-star
-                  i.far.fa-star
-                span.reviewAuthor Arjun
-                small.reviewTimestamp  14 February 2013
-              .col-12
-                p It was Okay
+              span.reviewAuthor Sathwika 
+              small.reviewTimestamp 8 May 2022
+               .col-12
+              p Must visit!!
+          .row.review
+            .col-12.no-gutters.review-header
+              span.rating
+                i.fas.fa-star
+                i.fas.fa-star
+                i.fas.fa-star
+                i.fas.fa-star
+                i.far.fa-star
+              span.reviewAuthor Nithin 
+              small.reviewTimestamp 2 January 2023
+               .col-12
+              p Wonderful food.  
 
-    .col-12
-      p.lead
-        | If you've been and you like it—or if you don't—please leave a review to help others just like you.
+
+  
