--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@
 /* General Styling */
 body {
   font-family: "Roboto", Arial, sans-serif;
-  color: #463f3a;
+  color: #000000;
   background-image: url('../images/background.png');
   background-size: cover;
   background-repeat: no-repeat;
@@ -18,23 +18,23 @@ body {
 /* Heading and Legends */
 h1, h2, h3, h4, h5, h6, legend {
   font-family: 'Playfair Display', serif;
-  color: #ffffff;
+  color: #000000;
 }
 
 /* Navbar Styling */
 .navbar {
   background-color: #08561e;
-  border-color: #912b7b;
+  border-color: #08561e;
 }
 
 .navbar-light .navbar-brand {
   font-family: 'Playfair Display', serif;
-  color: #ece9e7;
+  color: #000000;
 }
 
 .navbar-light .navbar-toggler {
-  color: #ecf0f1;
-  border-color: #ecf0f1;
+  color: #000000;
+  border-color: #000000;
 }
 
 .navbar-light .navbar-toggler-icon {
@@ -44,14 +44,14 @@ h1, h2, h3, h4, h5, h6, legend {
 .navbar-light .navbar-nav .nav-link,
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #ecf0f1;
+  color: #000000;
 }
 
 /* Banner Styling */
 .banner {
   background: url('../stylesheets/logo2.jpg') no-repeat center center; /* Updated image URL */
   background-size: contain;
-  color: #fff;
+  color: #000000;
   padding: 6rem 1rem; /* Increased padding for more space */
   text-align: center;
   margin-bottom: 2rem;
@@ -97,17 +97,17 @@ h1, h2, h3, h4, h5, h6, legend {
 
 /* Review Section */
 .review-header {
-  background-color: #08561e;
+  background-color: #000000;
   padding: 1rem;
   margin-bottom: 1rem;
-  color: #ffffff;
+  color: #08561eef;
   border-radius: 8px 8px 0 0;
 }
 
 .review {
   padding: 1rem;
-  background-color: #ecf0f1;
-  border-bottom: 1px solid #bdc3c7;
+  background-color: #08561eef;
+  border-bottom: 1px solid #08561eef;
   margin-bottom: 1rem;
 }
 
@@ -125,11 +125,11 @@ h4 a, h4 a:hover {
 h4 small {
   font-size: 60%;
   line-height: 200%;
-  color: #7f8c8d;
+  color: #000000;
 }
 
 h1 small {
-  color: #7f8c8d;
+  color: #000000;
 }
 
 /* Address and Facilities */
@@ -143,22 +143,15 @@ p {
 }
 
 a {
-  color: #ffffff;
+  color: #000000;
   text-decoration: none;
 }
 
 a:hover {
-  color: #13ad53;
+  color: #00ff08;
   text-decoration: underline;
 }
 
-/* Add travel images to specific elements */
-.travel-hero {
-  background: url('../stylesheets/traveltext2.png') no-repeat center center; /* Updated image URL */
-  background-size: cover;
-  height: 300px; /* Adjust height as needed */
-  border-radius: 8px;
-}
 
 .location-map img {
   border-radius: 8px;
