--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-/* Import Google Fonts */
+/* Import Google Fonts */ 
 @import url("//fonts.googleapis.com/css?family=Roboto|Playfair+Display:400,700");
 
 /* General Styling */
@@ -87,7 +87,7 @@ h1, h2, h3, h4, h5, h6, legend {
 /* Update for Facilities Badges */
 .facilities span.badge.badge-warning {
   margin-right: 4px;
-  background-color: #002f6c !important; /* Navy blue background color */
+  background-color: #000000 !important; /* Navy blue background color */
   color: #fff !important; /* White text color */
 }
 
